--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"node": ">=6"
 	},
 	"dependencies": {
+		"mri": "^1.1.0",
+		"whatwg-url": "^6.4.0"
 	},
 	"scripts": {
 		"test": "env NODE_ENV=dev node test.js",
