add executable entry :bug:, 0.1.1

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
 	"name": "parse-url-cli",
 	"description": "Parse a URL, get one or all components pretty-printed or as JSON.",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"files": [
 		"cli.js"
 	],
+	"bin": {
+		"parse-url": "./cli.js"
+	},
 	"keywords": [
 		"url",
 		"parse",
