--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,10 @@ keywords = ["url", "parse"]
 exclude = [".github"]
 
 [dependencies]
+clap = { version = "4.3.21", features = ["derive"] }
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.104"
+url = { version = "2.4.0", features = ["serde"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
