--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["url", "parse"]
 exclude = [".github"]
 
 [dependencies]
+atty = "0.2.14"
 clap = { version = "4.3.21", features = ["derive"] }
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
