CI, readme: chunked_transfer_cli -> url_parser_cli 💚📝; 4.0.1
fixes https://github.com/derhuerst/url-parser-cli/issues/9

--- a/.github/workflows/publish-binaries.yml
+++ b/.github/workflows/publish-binaries.yml
@@ -4,9 +4,6 @@ on:
   push:
     tags:
       - '*'
-    # todo: remove
-    branches:
-      - ci
 
 jobs:
   test:
@@ -95,6 +92,6 @@ jobs:
         with:
           target_commitish: ${{ github.sha }}
           tag_name: ${{ github.ref_name }}
-          name: 'chunked-transfer-cli ${{ github.ref_name }}'
+          name: 'url-parser-cli ${{ github.ref_name }}'
           fail_on_unmatched_files: true
           files: 'bin/*'
